--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 rusqlite = "0.31"
 slint = "1.13"
 chrono = { version = "0.4", features = ["serde"] }
+chrono-tz = "0.8"
 
 [build-dependencies]
 slint-build = "1.13"
