--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 rusqlite = "0.31"
-slint = "1.13"
+slint = { version = "1.13" }
 chrono = { version = "0.4", features = ["serde"] }
 chrono-tz = "0.8"
 
