--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ rusqlite = "0.31"
 slint = { version = "1.13" }
 chrono = { version = "0.4", features = ["serde"] }
 chrono-tz = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [build-dependencies]
 slint-build = "1.13"
